--- a/app/index.html
+++ b/app/index.html
@@ -21,31 +21,8 @@
     <![endif]-->
 
     <!-- Add your site or application content here -->
-    <div class="header">
-      <div class="navbar navbar-default" role="navigation">
-        <div class="container">
-          <div class="navbar-header">
-
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#js-navbar-collapse">
-              <span class="sr-only">Toggle navigation</span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-            </button>
-
-            <a class="navbar-brand" href="#/">[NÖRD:IGT]s ”Seal of Approval”, en inofficiell lista</a>
-          </div>
-
-          <div class="collapse navbar-collapse" id="js-navbar-collapse">
-
-            <ul class="nav navbar-nav">
-              <li class="active"><a href="#/">Home</a></li>
-              <li><a ng-href="#/about">About</a></li>
-              <li><a ng-href="#/">Contact</a></li>
-            </ul>
-          </div>
-        </div>
-      </div>
+    <div class="header">  
+      <h3>[NÖRD:IGT]s ”Seal of Approval”, en inofficiell lista</h3>
     </div>
 
     <div class="container">
@@ -55,7 +32,7 @@
     <div class="footer">
       <div class="container">
         <p>Copyright <span class="glyphicon glyphicon-copyright-mark"></span> 2016 Alexander Roslund</p>
-        <p>Här hittar du podcasten <a href="http://www.nördigt.nu">[Nörd:igt]</a></p>
+        <p>Här hittar du podcasten <a href="http://www.nördigt.nu" target="_blank">[Nörd:igt]</a></p>
       </div>
     </div>
 
