--- a/app/index.html
+++ b/app/index.html
@@ -13,6 +13,7 @@
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/main.css -->
     <link rel="stylesheet" href="styles/main.css">
+    <script src="https://use.fontawesome.com/1c51ff6158.js"></script>
     <!-- endbuild -->
   </head>
   <body ng-app="sealsofnordigtApp">
